syntax = "proto3";

option csharp_namespace = "PetClinicNamespace";

// Расширение доступных типов данных для protobuf файла
import "google/protobuf/wrappers.proto";

// Расширение для даты и времени
import "google/protobuf/timestamp.proto";

service ClinicService
{
	// Client
	rpc CreateClient(CreateClientRequest) returns (CreateClientResponse);
	rpc UpdateClient(UpdateClientRequets) returns (UpdateClientResponse);
	rpc DeleteClient(DeleteClientRequets) returns (DeleteClientResponse);
	rpc GetClientById(GetClientByIdRequest) returns (GetClientByIdResponse);
	rpc GetClients(GetClientsRequest) returns (GetClientsResponse);

	// Pet
	rpc CreatePet(CreatePetRequest) returns (CreatePetResponse);
	rpc UpdatePet(UpdatePetRequets) returns (UpdatePetResponse);
	rpc DeletePet(DeletePetRequets) returns (DeletePetResponse);
	rpc GetPetById(GetPetByIdRequest) returns (GetPetByIdResponse);
	rpc GetPets(GetPetsRequest) returns (GetPetsResponse);
}


// Client messages

message CreateClientRequest
{
	string document = 1;
	string firstName = 2;
	string surname = 3;
	string patronymic = 4;
}

message CreateClientResponse
{
	// google.protobuf.Int32Value - nullable type
	google.protobuf.Int32Value clientid = 1;
	int32 errCode = 2;
	string errMessage = 3;
}

message UpdateClientRequets
{
	int32 clientId = 1;
	string document = 2;
	string firstName = 3;
	string surname = 4;
	string patronymic = 5;
}

message UpdateClientResponse
{
	int32 errCode = 1;
	string errMessage = 2;
}

message DeleteClientRequets
{
	int32 clientId = 1;
}

message DeleteClientResponse
{
	int32 errCode = 1;
	string errMessage = 2;
}

message GetClientByIdRequest
{
	int32 clientId = 1;
}

message ClientResponse
{
	int32 clientId = 1;
	string document = 2;
	string firstName = 3;
	string surname = 4;
	string patronymic = 5;
} 

message GetClientByIdResponse
{
	ClientResponse client = 1;
	int32 errCode = 2;
	string errMessage = 3;
}

message GetClientsRequest
{
}

message GetClientsResponse
{
	repeated ClientResponse clients = 1;
	int32 errCode = 2;
	string errMessage = 3;
}

// Pet messages

message CreatePetRequest
{
	int32 clientId = 1;
	string name = 2;
	google.protobuf.Timestamp  birthday = 3;
}

message CreatePetResponse
{
	// google.protobuf.Int32Value - nullable type
	google.protobuf.Int32Value petId = 1;
	int32 errCode = 2;
	string errMessage = 3;
}

message UpdatePetRequets
{
	int32 petId = 1;
	int32 clientId = 2;
	string name = 3;
	google.protobuf.Timestamp  birthday = 4;
}

message UpdatePetResponse
{
	int32 errCode = 1;
	string errMessage = 2;
}

message DeletePetRequets
{
	int32 petId = 1;
}

message DeletePetResponse
{
	int32 errCode = 1;
	string errMessage = 2;
}

message GetPetByIdRequest
{
	int32 petId = 1;
}

message PetResponse
{
	int32 petId = 1;
	int32 clientId = 2;
	string name = 3;
	google.protobuf.Timestamp  birthday = 4;
} 

message GetPetByIdResponse
{
	PetResponse pet = 1;
	int32 errCode = 2;
	string errMessage = 3;
}

message GetPetsRequest
{
}

message GetPetsResponse
{
	repeated PetResponse pets = 1;
	int32 errCode = 2;
	string errMessage = 3;
}

